fix spacing on extra long titles in books

--- a/src/main/resources/scss/_content-nav.scss
+++ b/src/main/resources/scss/_content-nav.scss
@@ -324,7 +324,7 @@
 		display: inline-block;
 		font-style: italic;
 		color: $primary-grey;
-		margin-right: 25px;
+		margin-right: 15px;
 		span {
 			font-weight: 600;
 		}
